include $(top_srcdir)/common/python.mk
include $(top_srcdir)/common/locale.mk

flumotiondir = $(libdir)/flumotion/python/flumotion/project

flumotion_PYTHON = flashmedia.py

clean-local:
	rm -f *.pyc *.pyo

PROJECT = flashmedia

BUILT_SOURCES = flashmedia.py
CLEANFILES = $(BUILT_SOURCES)

EXTRA_DIST = flashmedia.py.in
